# nina

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: nina.h  nina_ext.h
src/include/: class.h  expected.h  option.h  panic.h  tried.h  typedef.h
